# pipe-aws-rust-simple-app

./: Cargo.toml  Dockerfile  License  Readme.md
.github/workflows/: deploy_environment.yaml  teardown_environment.yaml
infrastructure/: backend.tf  main.tf  variables.tf
infrastructure/.terraform/modules/: modules.json
infrastructure/backend/: dev-config.s3.tfbackend  prod-config.s3.tfbackend
infrastructure/modules/application/: main.tf  variables.tf
infrastructure/modules/registry/: main.tf
infrastructure/modules/vpc/: main.tf  variables.tf
infrastructure/variables/: default.tfvars
src/: main.rs
